responsivness for education and skills done

--- a/src/styles/css/education.css
+++ b/src/styles/css/education.css
@@ -63,6 +63,7 @@
 .section_2 .boxes .right-box .img-container a .certificate {
   box-shadow: 0 0 19px -2px #000;
   width: 15vw;
+  min-width: 300px;
 }
 .section_2 .boxes .right-box .img-container a:hover {
   transform: scale(1.2);
@@ -75,7 +76,6 @@
   display: flex;
   flex-direction: column;
   padding: 20px;
-  max-width: 900px;
   margin: auto;
   padding-bottom: 300px;
   opacity: 0;
@@ -95,6 +95,8 @@
   justify-content: center;
   border-top: 1px solid rgba(177, 177, 177, 0.7960784314);
   padding-top: 20px;
+  width: 100%;
+  max-width: 885px;
 }
 .section_2 .skillsbox .main-skills .skill-box,
 .section_2 .skillsbox .other-skills .skill-box {
@@ -116,8 +118,8 @@
 }
 
 .active.fade-bottom {
-  animation: fade-bottom 1s ease-in;
-  transition: height 1s ease;
+  animation: fade-bottom 0.5s ease-in;
+  transition: height 0.5s ease;
 }
 
 @keyframes fade-bottom {
@@ -128,5 +130,76 @@
   100% {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+@media screen and (max-width: 1299px) {
+  .section_2 .boxes {
+    flex-direction: column;
+  }
+  .section_2 .boxes .left-box {
+    width: auto;
+    margin: 0 auto 40px;
+  }
+  .section_2 .boxes .left-box h1 {
+    font-size: calc(25px + 6vw);
+    margin: 0 auto;
+  }
+  .section_2 .boxes .left-box .img-container {
+    justify-content: space-around;
+  }
+  .section_2 .boxes .left-box .img-container img {
+    width: 150px;
+  }
+  .section_2 .boxes .left-box .img-container .uw_title {
+    margin-left: 0;
+    width: 175px;
+  }
+  .section_2 .skillsbox h1 {
+    font-size: calc(25px + 6vw);
+  }
+}
+@media screen and (max-width: 952px) {
+  .section_2 {
+    display: flex;
+    flex-direction: column;
+  }
+  .section_2 .boxes {
+    padding: 300px 0 100px 0;
+  }
+  .section_2 .boxes .right-box .img-container {
+    flex-direction: column;
+  }
+  .section_2 .boxes .right-box .img-container a .certificate {
+    box-shadow: 0 0 19px -2px #000;
+    width: 80%;
+    min-width: 300px;
+    margin: auto;
+    max-width: 700px;
+  }
+  .section_2 .boxes .right-box .img-container a:hover {
+    transform: scale(1.2);
+  }
+}
+@media screen and (max-width: 330px) {
+  .section_2 .boxes .left-box .img-container {
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+  }
+  .section_2 .boxes .right-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .section_2 .boxes .right-box .img-container {
+    display: flex;
+    gap: 20px;
+  }
+  .section_2 .boxes .right-box .img-container a .certificate {
+    width: 80%;
+    min-width: 150px;
+  }
+  .section_2 .skillsbox h1 {
+    text-align: center;
   }
 }/*# sourceMappingURL=education.css.map */
