--- a/src/styles/scss/education.scss
+++ b/src/styles/scss/education.scss
@@ -117,17 +117,19 @@
 }
 
 .active.fade-bottom {
-  animation: fade-bottom 0.5s ease-in;
-  transition: height 0.5s ease;
+  animation: fade-bottom 1s ease-in;
+  transition: height 1s ease;
 }
 @keyframes fade-bottom {
   0% {
     opacity: 0;
-    transform: translateY(450px);
+    transform: translateY(250px);
+  }
+  10% {
+    transform: translateY(0);
   }
   100% {
     opacity: 1;
-    transform: translateY(0);
   }
 }
 @media screen and (max-width: 1299px) {
