--- a/src/styles/css/education.css
+++ b/src/styles/css/education.css
@@ -104,6 +104,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
+  transition: transform 0.3s ease;
 }
 .section_2 .skillsbox .main-skills .skill-box img,
 .section_2 .skillsbox .other-skills .skill-box img {
@@ -114,6 +116,10 @@
 .section_2 .skillsbox .other-skills .skill-box p {
   color: #fff;
   margin-top: 10px;
+}
+.section_2 .skillsbox .main-skills .skill-box:hover,
+.section_2 .skillsbox .other-skills .skill-box:hover {
+  transform: scale(1.3);
 }
 
 .active.fade-bottom {
