--- a/src/styles/css/projects.css
+++ b/src/styles/css/projects.css
@@ -183,6 +183,7 @@
   top: 50%;
   transform: translate(-50%, -50%);
   width: 90%;
+  max-width: 1400px;
 }
 .modal_box .closeIcon {
   position: absolute;
@@ -192,7 +193,7 @@
   cursor: pointer;
 }
 .modal_box .box_content {
-  align-items: center;
+  align-items: flex-start;
   display: flex;
   justify-content: space-between;
 }
@@ -204,6 +205,7 @@
   width: 100%;
 }
 .modal_box .box_content .right_box {
+  max-width: 580px;
   margin-left: 20px;
 }
 .modal_box .box_content .right_box .project_links {
