--- a/src/styles/scss/education.scss
+++ b/src/styles/scss/education.scss
@@ -66,6 +66,18 @@
           }
         }
       }
+      .button-section {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        gap: 10px;
+        justify-content: center;
+        width: 100%;
+        .button-orange {
+          max-width: 200px;
+          width: 95%;
+        }
+      }
     }
   }
   .boxes.active,
