--- a/src/styles/scss/education.scss
+++ b/src/styles/scss/education.scss
@@ -119,6 +119,7 @@
         img {
           width: 75px;
           height: 75px;
+          object-fit: contain;
         }
         p {
           color: #fff;
