--- a/src/styles/css/NavBar.css
+++ b/src/styles/css/NavBar.css
@@ -14,7 +14,7 @@ nav {
   font-size: 2dvh;
 }
 nav .navbar-brand {
-  color: #fff;
+  color: #000;
   cursor: pointer;
   display: flex;
   font-size: 2.5dvh;
@@ -22,26 +22,36 @@ nav .navbar-brand {
   text-transform: uppercase;
   transition: ease all 0.5s;
 }
+nav .navbar-brand:hover {
+  -webkit-text-stroke-width: 0.5px;
+  -webkit-text-stroke-color: black;
+  color: #fa6400;
+  transition: ease all 0.2s;
+}
 nav .nav-item {
+  color: #000;
   align-items: center;
   display: flex;
   justify-content: center;
   padding: 0 20px;
 }
 nav .nav-item a {
-  color: #fff;
   text-decoration: none;
+  color: #000;
 }
 nav .nav-item a:hover {
-  color: #252525;
-  transition: ease all 0.5s;
+  -webkit-text-stroke-width: 0.5px;
+  -webkit-text-stroke-color: black;
+  color: #fa6400;
+  transition: ease all 0.2s;
 }
 nav .nav-item svg {
-  color: #fff;
+  color: #000;
   cursor: pointer;
-  stroke: #000;
 }
 nav .nav-item svg:hover {
-  color: #252525;
-  transition: ease all 0.5s;
+  color: #fa6400;
+  stroke-width: 0.5px;
+  stroke: black;
+  transition: ease all 0.2s;
 }/*# sourceMappingURL=navbar.css.map */
