--- a/src/styles/css/footer.css
+++ b/src/styles/css/footer.css
@@ -1,13 +1,24 @@
 footer {
   align-items: center;
   background: rgb(1, 4, 5);
-  color: #fff;
   display: flex;
   font-size: 30px;
   height: 85px;
   justify-content: center;
   position: relative;
   width: 100%;
+}
+footer nav .navbar-brand {
+  color: #fff;
+}
+footer nav .nav-item {
+  color: #fff;
+}
+footer nav .nav-item a {
+  color: #fff;
+}
+footer nav .nav-item svg {
+  color: #fff;
 }
 
 @media screen and (max-width: 767px) {
