--- a/src/styles/scss/navbar.scss
+++ b/src/styles/scss/navbar.scss
@@ -12,34 +12,44 @@ nav {
   font-size: 2dvh;
 
   .navbar-brand {
-    color: #fff;
+    color: #000;
     cursor: pointer;
     display: flex;
     font-size: 2.5dvh;
     justify-content: center;
     text-transform: uppercase;
     transition: ease all 0.5s;
+    &:hover {
+      -webkit-text-stroke-width: 0.5px;
+      -webkit-text-stroke-color: black;
+      color: #fa6400;
+      transition: ease all 0.2s;
+    }
   }
   .nav-item {
+    color: #000;
     align-items: center;
     display: flex;
     justify-content: center;
     padding: 0 20px;
     a {
-      color: #fff;
       text-decoration: none;
+      color: #000;
       &:hover {
-        color: #252525;
-        transition: ease all 0.5s;
+        -webkit-text-stroke-width: 0.5px;
+        -webkit-text-stroke-color: black;
+        color: #fa6400;
+        transition: ease all 0.2s;
       }
     }
     svg {
-      color: #fff;
+      color: #000;
       cursor: pointer;
-      stroke: #000;
       &:hover {
-        color: #252525;
-        transition: ease all 0.5s;
+        color: #fa6400;
+        stroke-width: 0.5px;
+        stroke: black;
+        transition: ease all 0.2s;
       }
     }
   }
