--- a/src/styles/css/education.css
+++ b/src/styles/css/education.css
@@ -88,8 +88,8 @@
   display: flex;
   flex-direction: column;
   padding: 20px;
-  margin: auto;
-  padding-bottom: 300px;
+  align-items: center;
+  padding-bottom: 150px;
   opacity: 0;
 }
 .section_2 .skillsbox h1 {
@@ -97,6 +97,7 @@
   color: #fff;
   font-size: 4vw;
   padding-top: 100px;
+  text-align: center;
 }
 .section_2 .skillsbox .main-skills,
 .section_2 .skillsbox .other-skills {
@@ -134,6 +135,23 @@
 .section_2 .skillsbox .main-skills .skill-box:hover,
 .section_2 .skillsbox .other-skills .skill-box:hover {
   transform: scale(1.3);
+}
+.section_2 .bottom-section {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 40px;
+}
+.section_2 .bottom-section .bottom_text {
+  font-size: 40px;
+  color: #fff;
+  margin: 0;
+}
+.section_2 .bottom-section .bottom_buttons {
+  padding-top: 20px;
+  border-top: 1px solid rgba(177, 177, 177, 0.7960784314);
+  display: flex;
+  gap: 20px;
 }
 
 .active.fade-bottom {
@@ -201,6 +219,11 @@
     transform: scale(1.2);
   }
 }
+@media screen and (max-width: 522px) {
+  .bottom-section .bottom_buttons {
+    flex-direction: column;
+  }
+}
 @media screen and (max-width: 330px) {
   .section_2 .boxes .left-box .img-container {
     flex-direction: column;
@@ -222,5 +245,13 @@
   }
   .section_2 .skillsbox h1 {
     text-align: center;
+  }
+  .section_2 .bottom-section .bottom_text {
+    font-size: 10vw;
+  }
+}
+@media screen and (max-width: 288px) {
+  .section_2 .bottom-section .bottom_buttons {
+    flex-direction: column;
   }
 }/*# sourceMappingURL=education.css.map */
