--- a/src/styles/css/footer.css
+++ b/src/styles/css/footer.css
@@ -1,12 +1,13 @@
 footer {
   align-items: center;
-  background: rgb(1, 4, 5);
   display: flex;
   font-size: 30px;
-  height: 85px;
   justify-content: center;
   position: relative;
   width: 100%;
+}
+footer nav {
+  background: rgb(1, 4, 5);
 }
 footer nav .navbar-brand {
   color: #fff;
