--- a/src/styles/scss/education.scss
+++ b/src/styles/scss/education.scss
@@ -88,14 +88,15 @@
     display: flex;
     flex-direction: column;
     padding: 20px;
-    margin: auto;
-    padding-bottom: 300px;
+    align-items: center;
+    padding-bottom: 150px;
     opacity: 0;
     h1 {
       margin: 0 auto;
       color: #fff;
       font-size: 4vw;
       padding-top: 100px;
+      text-align: center;
     }
     .main-skills,
     .other-skills {
@@ -129,6 +130,23 @@
           transform: scale(1.3);
         }
       }
+    }
+  }
+  .bottom-section {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 40px;
+    .bottom_text {
+      font-size: 40px;
+      color: #fff;
+      margin: 0;
+    }
+    .bottom_buttons {
+      padding-top: 20px;
+      border-top: 1px solid #b1b1b1cb;
+      display: flex;
+      gap: 20px;
     }
   }
 }
@@ -206,6 +224,13 @@
     }
   }
 }
+@media screen and (max-width: 522px) {
+  .bottom-section {
+    .bottom_buttons {
+      flex-direction: column;
+    }
+  }
+}
 @media screen and (max-width: 330px) {
   .section_2 {
     .boxes {
@@ -235,6 +260,20 @@
     .skillsbox {
       h1 {
         text-align: center;
+      }
+    }
+    .bottom-section {
+      .bottom_text {
+        font-size: 10vw;
+      }
+    }
+  }
+}
+@media screen and (max-width: 288px) {
+  .section_2 {
+    .bottom-section {
+      .bottom_buttons {
+        flex-direction: column;
       }
     }
   }
