--- a/src/styles/scss/projects.scss
+++ b/src/styles/scss/projects.scss
@@ -27,7 +27,7 @@
 
   position: relative;
   width: 100%;
-  background-image: url('../../assets/AVIF/projects.avif');
+  // background-image: url('../../assets/AVIF/projects.avif');
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
@@ -38,7 +38,7 @@
     border-bottom: 1px solid #b1b1b1cb;
     width: 100%;
     text-align: center;
-    max-width: 700px;
+    max-width: 310px;
   }
   .all_projects {
     align-items: center;
