--- a/src/styles/scss/projects.scss
+++ b/src/styles/scss/projects.scss
@@ -219,6 +219,9 @@
     .vue {
       background-color: #41b883;
     }
+    .ts {
+      background-color: #3178c6;
+    }
   }
 
   ul {
@@ -256,6 +259,9 @@
       }
       .vue {
         background-color: #41b883;
+      }
+      .ts {
+        background-color: #3178c6;
       }
     }
   }
