--- a/src/styles/scss/navbar.scss
+++ b/src/styles/scss/navbar.scss
@@ -12,7 +12,7 @@ nav {
   font-size: 2dvh;
 
   .navbar-brand {
-    color: #000;
+    color: #fff;
     cursor: pointer;
     display: flex;
     font-size: 2.5dvh;
@@ -20,35 +20,28 @@ nav {
     text-transform: uppercase;
     transition: ease all 0.5s;
     &:hover {
-      -webkit-text-stroke-width: 0.5px;
-      -webkit-text-stroke-color: black;
-      color: #fa6400;
+      color: #6e6d6d;
       transition: ease all 0.2s;
     }
   }
   .nav-item {
-    color: #000;
     align-items: center;
     display: flex;
     justify-content: center;
     padding: 0 20px;
     a {
       text-decoration: none;
-      color: #000;
+      color: #fff;
       &:hover {
-        -webkit-text-stroke-width: 0.5px;
-        -webkit-text-stroke-color: black;
-        color: #fa6400;
+        color: #6e6d6d;
         transition: ease all 0.2s;
       }
     }
     svg {
-      color: #000;
+      color: #fff;
       cursor: pointer;
       &:hover {
-        color: #fa6400;
-        stroke-width: 0.5px;
-        stroke: black;
+        color: #6e6d6d;
         transition: ease all 0.2s;
       }
     }
