--- a/src/styles/scss/projects.scss
+++ b/src/styles/scss/projects.scss
@@ -419,6 +419,7 @@
   .section_4 {
     h1 {
       font-size: calc(25px + 6vw);
+      margin-bottom: 40px;
     }
     .all_projects {
       .new_project,
