--- a/src/styles/css/NavBar.css
+++ b/src/styles/css/NavBar.css
@@ -8,6 +8,8 @@ audio {
   position: absolute;
   top: 0;
   width: 100%;
+  z-index: 3;
+  background: rgba(46, 42, 42, 0.15);
 }
 
 nav {
@@ -27,10 +29,16 @@ nav .navbar-brand:hover {
   transition: ease all 0.2s;
 }
 nav .nav-item {
+  color: #fff;
   align-items: center;
   display: flex;
   justify-content: center;
   padding: 0 20px;
+  cursor: pointer;
+}
+nav .nav-item:hover {
+  color: #6e6d6d;
+  transition: ease all 0.2s;
 }
 nav .nav-item a {
   text-decoration: none;
