--- a/src/styles/css/NavBar.css
+++ b/src/styles/css/NavBar.css
@@ -13,7 +13,7 @@ audio {
 }
 
 nav {
-  font-size: 2dvh;
+  font-size: 2.5dvh;
 }
 nav .navbar-brand {
   color: #fff;
@@ -55,4 +55,11 @@ nav .nav-item svg {
 nav .nav-item svg:hover {
   color: #6e6d6d;
   transition: ease all 0.2s;
+}
+
+@media screen and (max-width: 767px) {
+  #nav {
+    font-size: 3dvh;
+    background: rgba(46, 42, 42, 0.8);
+  }
 }/*# sourceMappingURL=navbar.css.map */
