--- a/src/styles/css/headbox.css
+++ b/src/styles/css/headbox.css
@@ -34,7 +34,7 @@
   box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
   box-sizing: border-box;
   color: #fff;
-  font-size: calc(11px + 0.5vw);
+  font-size: 2.5dvh;
   cursor: pointer;
   align-items: center;
   display: flex;
