--- a/src/styles/scss/navbar.scss
+++ b/src/styles/scss/navbar.scss
@@ -11,7 +11,7 @@ audio {
   background: rgba(#2e2a2a, 0.15);
 }
 nav {
-  font-size: 2dvh;
+  font-size: 2.5dvh;
 
   .navbar-brand {
     color: #fff;
@@ -57,5 +57,7 @@ nav {
 }
 @media screen and (max-width: 767px) {
   #nav {
+    font-size: 3dvh;
+    background: rgba(#2e2a2a, 0.8);
   }
 }
