--- a/src/styles/scss/headbox.scss
+++ b/src/styles/scss/headbox.scss
@@ -1,3 +1,8 @@
+#notheme {
+  right: 50%;
+  top: 50%;
+  transform: translate(50%, -50%);
+}
 .head-box {
   align-items: center;
   box-sizing: border-box;
