--- a/src/styles/scss/headbox.scss
+++ b/src/styles/scss/headbox.scss
@@ -32,6 +32,9 @@
     text-align: center;
   }
 }
+.button-orange.button-gray {
+  background-color: #474747;
+}
 .button-orange {
   background-color: #fa6400;
   border-radius: 0.25rem;
