--- a/src/styles/scss/projects.scss
+++ b/src/styles/scss/projects.scss
@@ -6,7 +6,7 @@
 .carousel-control-prev-icon {
   width: 3rem;
   height: 3rem;
-  background-color: #fa6400;
+  background-color: #ffffff00;
   border-radius: 50%;
 }
 .carousel-indicators {
