--- a/src/styles/css/headbox.css
+++ b/src/styles/css/headbox.css
@@ -33,6 +33,10 @@
   text-align: center;
 }
 
+.button-orange.button-gray {
+  background-color: #474747;
+}
+
 .button-orange {
   background-color: #fa6400;
   border-radius: 0.25rem;
