--- a/src/styles/css/projects.css
+++ b/src/styles/css/projects.css
@@ -7,7 +7,7 @@
 .carousel-control-prev-icon {
   width: 3rem;
   height: 3rem;
-  background-color: #fa6400;
+  background-color: rgba(255, 255, 255, 0);
   border-radius: 50%;
 }
 
